--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
   "editorconfig": true,
   "jsxSingleQuote": true,
   "bracketSameLine": false,
-  "bracketSpacing": false,
+  "bracketSpacing": true,
   "singleAttributePerLine": true,
   "endOfLine": "lf",
   "arrowParens": "avoid",
